5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1800_2571.log
== TEST (2019-06-12 15:17:13) 
-- CODE:
# Módulo
from numpy import *
# Entrada
text = input("Texto: ").split'a'.split'A'
# Saída
print(text)
		
-- ERROR:
File "XXXX", line 4
    text = input().split'a'.split'A'
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:17:50) 
-- CODE:
# Módulo
from numpy import *
# Entrada
text = input("Texto: ").split('a').split('A')
# Saída
print(text)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:20:51) 
-- CODE:
# Módulo
from numpy import *
# Entrada
text = input("Texto: ")
# Laço
for x in text:
	if x != A:
		print(text)
	elif x != a:
		print(text)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:21:48) 
-- CODE:
# Módulo
from numpy import *
# Entrada
text = input("Texto: ")
# Laço
for i in size(text):
	if i != A:
		print(text)
	elif i != a:
		print(text)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:28:00) 
-- CODE:
# Módulo
from numpy import *
# Entrada
text = input("Texto: ")
# Laço
for i in range(size(text)):
	if i != A:
		print(text)
	elif i != a:
		print(text)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:57:13) 
-- CODE:
# Módulo
from numpy import *
# Entrada
text = input("Texto: ")
# Laço
for i in range(size(text)):
	a = a.replace("a","")
	a = a.replace("A","")
# Saída
print(text)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:57:53) 
-- CODE:
# Módulo
from numpy import *
# Entrada
text = input("Texto: ")
# Laço
for x in text:
	a = a.replace("a","")
	a = a.replace("A","")
# Saída
print(text)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:58:11) 
-- CODE:
# Módulo
from numpy import *
# Entrada
text = input("Texto: ")
# Laço
for x in text:
	text = a.replace("a","")
	text = a.replace("A","")
# Saída
print(text)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:58:53) 
-- CODE:
# Módulo
from numpy import *
# Entrada
a = input("Texto: ")
# Laço
for x in a:
	a = a.replace("a","")
	a = a.replace("A","")
# Saída
print(text)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:59:04) 
-- CODE:
# Módulo
from numpy import *
# Entrada
a = input("Texto: ")
# Laço
for x in a:
	a = a.replace("a","")
	a = a.replace("A","")
# Saída
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:59:13) 
-- CODE:
# Módulo
from numpy import *
# Entrada
a = input("Texto: ")
# Laço
for x in a:
	a = a.replace("a","")
	a = a.replace("A","")
# Saída
print(a)
-- EXECUTION TIME:
1.14696
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
